2008-01-18  Akim Demaille  <demaille@gostai.com>

	Make inclusion of *.mk files easier.
	* Makefile.am, configure.ac: Adjust.
	* include/libport.mk: Move to...
	* include/libport/libport.mk: here, so that the includer can 
	find it without requiring to also include its parent.
	Adjust.
	* include/Makefile.am: Remove.
	* lib/libport/Makefile.am: Adjust.
	* lib/libport/libport-sources.mk: Adjut.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	include/libport.mk.
	* build-aux/urbi-libport.m4 (URBI_LIBPORT): Define
	libport_include_basedir, not libportdir.
	* include/Makefile.am: Rename as...
	* include/libport.mk: New.
	* include/Makefile.am: New.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Make libport autonomous.
	* Makefile.am: Adjust.
	* build-aux/bootstrap: Extend to install symlinks.
	* build-aux/build-aux.mk, build-aux/doxygen.mk, build-aux/init.mk,
	* build-aux/revision.mk, build-aux/urbi-doc.m4: Remove libport/
	prefix.
	* build-aux/urbi-libport.m4: Adjust.
	* build-aux/vcs/local.rb: Remove.
	* configure.ac: Adjust.
	* include/Makefile.am: Adjust.
	* lib/libport/Makefile.am: Rename from lib/Makefile.am.
	* lib/libport/cli.cc: Rename from lib/cli.cc.
	* lib/libport/contract.cc: Rename from lib/contract.cc.
	* lib/libport/deref.cc: Rename from lib/deref.cc.
	* lib/libport/escape.cc: Rename from lib/escape.cc.
	* lib/libport/file-system.cc: Rename from lib/file-system.cc.
	* lib/libport/indent.cc: Rename from lib/indent.cc.
	* lib/libport/libport-sources.mk: Rename from lib/libport-sources.mk.
	* lib/libport/package-info.cc: Rename from lib/package-info.cc.
	* lib/libport/program-name.cc: Rename from lib/program-name.cc.
	* lib/libport/sched.cc: Rename from lib/sched.cc.
	* lib/libport/symbol.cc: Rename from lib/symbol.cc.
	* lib/libport/sysexits.cc: Rename from lib/sysexits.cc.
	* lib/libport/tokenizer.cc: Rename from lib/tokenizer.cc.
	* lib/libport/uffloat.cc: Rename from lib/uffloat.cc.
	* lib/libport/ufloat.cc: Rename from lib/ufloat.cc.