@@ -7,11 +7,11 @@
 ## --------- ##
 
 # Where we find libport sources in this package.
-libport_srcdir   = $(top_srcdir)/$(lib_libport)
-libport_builddir = $(top_builddir)/$(lib_libport)
+libport_srcdir   = $(srcdir)/$(lib_libport)
+libport_builddir = $(builddir)/$(lib_libport)
 # The library itself is compiled by the host directory.
 # We might stop that some day and have libport be an autonomous dir.
-libport_la = $(top_builddir)/libport/lib/libport.la
+libport_la = $(top_builddir)/lib/libport/libport.la
 
 # Sources to compile to use libport.
 libport_sources = 				\
